tests/NormalTests/paczka1/small_fuzzy/42079827.err
Error in line 1: aUPmrwEAbx2 A939 14,6
Error in line 3: aUPmrwEAbx2 A13 49,0
Error in line 2: VNJ A531 74,5
Error in line 10: A531 S431 10,4
